# elastic-drums

./: .env.example  .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  scene-remote-mockup.html  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
.playwright-mcp/: page-2026-04-12T12-31-23-972Z.yml  page-2026-04-12T12-38-51-501Z.yml  page-2026-04-12T12-41-03-820Z.yml  page-2026-04-12T12-47-20-934Z.yml  page-2026-04-12T14-00-26-757Z.yml  page-2026-04-12T14-02-56-398Z.yml  page-2026-04-12T15-33-23-146Z.yml
core/: CMakeLists.txt  DrumCore.cpp  DrumCore.h
core/fx/: Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  Filter.cpp  Filter.h  Reverb.cpp  Reverb.h
core/mixer/: Mixer.cpp  Mixer.h
core/sequencer/: PatternData.h  Sequencer.cpp  Sequencer.h
core/voices/: ClapVoice.cpp  ClapVoice.h  CymbalVoice.cpp  CymbalVoice.h  HiHatVoice.cpp  HiHatVoice.h  KickVoice.cpp  KickVoice.h  PercVoice.cpp  PercVoice.h  SampleVoice.cpp  SampleVoice.h  SnareVoice.cpp  SnareVoice.h  TomVoice.cpp  TomVoice.h
core/wasm/: WasmBindings.cpp
dist-audio-fix/: index.html
dist-audio-fix/assets/: index-DUCZmhnm.js  index-vIq-A21g.css
dist-v2-final/: index.html
dist-v2-final/assets/: index-DeCialqH.css  index-Di0slKDd.js
dist-v2-final/wasm/: elastic-drums-wasm.wasm
dist-v2-scene/: drum-worklet.js  index.html  sw.js
dist-v2-scene/assets/: index-DSZIIgfm.js  index-W3VmhRTo.css
dist-v2-test/: index.html
dist-v2-test/assets/: index-BqyPI0s7.js  index-IWXPK5Qb.css
dist-v2-test/wasm/: elastic-drums-wasm.js
docs/: MIDI-EDITOR-SPEC.md  ROADMAP.md
docs/superpowers/plans/: 2026-04-23-elastic-drum-finalization.md  2026-04-25-fx-overhaul.md  2026-04-25-premium-synth-sounds.md  2026-04-25-warp-engine.md  2026-04-26-arrangement-view-redesign.md  2026-04-26-group-bus-fader.md  2026-04-26-piano-roll-ux-contrast.md  2026-04-26-polish-sprint-ab.md  2026-04-26-scene-loop-integration.md  2026-04-27-chord-piano-roll.md  2026-04-27-melody-call-response.md  2026-04-27-melody-layers.md  2026-04-29-arp-panel.md  2026-04-29-per-track-arrangement.md  2026-04-30-audio-clip-editor.md  2026-04-30-melody-pad-volume-arp.md  2026-05-01-beat-fx-panel.md  2026-05-05-ui-phase1-visual-foundation.md  2026-05-05-ui-phase2-drum-core.md  2026-05-06-sample-renaming.md  2026-05-18-performance-pad-step-control.md
docs/superpowers/specs/: 2026-04-23-elastic-drum-finalization-design.md  2026-04-25-fx-overhaul-design.md  2026-04-25-premium-synth-sounds-design.md  2026-04-26-arrangement-view-redesign.md  2026-04-26-group-bus-fader-design.md  2026-04-26-piano-roll-ux-contrast-design.md  2026-04-26-polish-sprint-ab-design.md  2026-04-26-scene-loop-integration-design.md  2026-04-27-chord-piano-roll-design.md  2026-04-27-melody-call-response-design.md  2026-04-27-melody-layers-design.md  2026-04-29-arp-panel-design.md  (+9 more)
export-server/: Dockerfile  index.js  package-lock.json  package.json
plugin/: CMakeLists.txt
plugin/resources/webapp/: index.html
plugin/resources/webapp/assets/: index--d8GUCKE.css  index-DXyzJSNk.js
plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
public/: drum-worklet.js  manifest.json  mockup-automation.html  sw.js  test-groove.mid
public/midi-library/: index.json
public/samples/: README.md
scripts/: build-midi-library.cjs  build-wasm.sh  rename-samples.mjs
src/: App.tsx  index.css  main.tsx
src/audio/: ArpScheduler.ts  Arpeggiator.ts  AudioEngine.ts  AudioWake.ts  BassEngine.ts  BeatFx.ts  ChordsEngine.ts  FxChain.ts  LoopPlayerEngine.ts  Macros.ts  MelodyEngine.ts  MelodyGeneratorEngine.ts  MelodyLayerFx.ts  Metering.ts  MidiLibraryParser.ts  MidiPlayer.ts  MixerRouting.ts  ModMatrix.ts  MotionRecorder.ts  MuLaw.ts  OnsetDetector.ts  SampleKitLoader.ts  SampleLibrary.ts  SampleManager.ts  SampleStretcher.ts  SamplerEngine.ts  SchedulerClock.ts  SendFx.ts  SlicerEngine.ts  SoundFontEngine.ts  SynthVoices.ts  VoiceRenderer.ts  Wavetables.ts  WorkerTimer.ts  arrangementScheduler.ts  audioClipEngine.ts  bpmAnalysisWorker.ts  drum-worklet.ts  filters.ts  melodyCREngines.ts  (+4 more)
src/components/: ArpPanel.tsx  ArrangementView.tsx  AutomationLane.tsx  BassSequencer.tsx  BeatFxPanel.tsx  ChannelFxRack.tsx  ChordsSequencer.tsx  ClipLauncher.tsx  DemoSongPicker.tsx  ErrorBoundary.tsx  EuclideanGenerator.tsx  FxPanel.tsx  FxRack.tsx  Hints.tsx  InstallHintIOS.tsx  KitBrowser.tsx  Knob.tsx  LoopEditor.tsx  LoopPlayerTab.tsx  MacroPanel.tsx  MelodyGenerator.tsx  MelodySequencer.tsx  MidiClockPanel.tsx  MidiLearnPanel.tsx  MidiPlayerPanel.tsx  MixerBar.tsx  MixerPanel.tsx  MixerStrip.tsx  ModMatrixEditor.tsx  OnboardingModal.tsx  PWAStatus.tsx  PadGrid.tsx  PatternBrowser.tsx  PatternVariationsBar.tsx  PerformanceMode.tsx  PerformancePad.tsx  PerformancePadStepLane.tsx  PianoRoll.tsx  RecordingControls.tsx  ResampleMenu.tsx  (+17 more)
src/data/: demoSongs.ts  loadDemoSong.ts  presetPatterns.ts
src/hooks/: useKeyboard.ts  useMidi.ts  useMidiClock.ts  useMotionRecording.ts  useUndoRedo.ts  useWakeLock.ts
src/kits/: KitManager.ts  factoryKits.ts
src/recording/: RecordingOrchestrator.ts
src/storage/: patternStorage.ts  sessionCapture.ts
src/store/: arrangementAutoStore.ts  arrangementStore.ts  audioClipStore.ts  autoSave.ts  bassStore.ts  chordPianoStore.ts  chordsStore.ts  clipStore.ts  customKitStore.ts  drumStore.ts  loopPlayerStore.ts  melodyCRStore.ts  melodyLayerStore.test.ts  melodyLayerStore.ts  melodyStore.ts  midiClockMode.ts  mixerBarStore.ts  overlayStore.ts  performancePadStep.test.ts  performancePadStep.ts  performancePadStore.test.ts  performancePadStore.ts  samplerStore.ts  sceneStore.ts  transportStore.ts
src/types/: soundtouchjs.d.ts
src/utils/: arrangementColors.test.ts  arrangementColors.ts  audioExport.ts  autoRecordExport.ts  midiExport.ts  patternShare.ts  resample.ts  resetAll.ts  sliceSample.ts  songExport.ts  stemsExport.ts  waveformMini.test.ts  waveformMini.ts
video/: .gitignore  README.md  package.json  tsconfig.json
video/src/: ElasticGrooveVideo.tsx  Root.tsx
(+1056 files in other folders)
